Details
-
Bug
-
Resolution: Fixed
-
Critical
-
Cheshire-Cat
-
7.0.0-5274
-
Untriaged
-
1
-
Unknown
-
KV-Engine Sprint 2021 June
Description
We see on_update_failure intermittently on reruns of this particular test :
Functions executed/sec, 1 bucket x 100M x 1KB, 4KV + 1Eventing node, Counter Increment 0% Contention Source bkt mutation
We have seen this on 2 out of 3 reruns of the same test. So, it might be worth looking at
Failed runs :
http://perf.jenkins.couchbase.com/job/themis/10745/
http://perf.jenkins.couchbase.com/job/themis/10742/
Passed run :
http://perf.jenkins.couchbase.com/job/themis/10744/
Please note that the resident ratio on the source bucket is slightly less than 100% (at 95%) in these runs . We have not seen this behaviour in the 100% resident ratio test as of now.
on_update_failures : from the stats
11:30:48 "on_delete_failure": 0,
|
11:30:48 "on_delete_success": 0,
|
11:30:48 "on_update_failure": 2,
|
11:30:48 "on_update_success": 158406056,
|
11:30:48 "processed_events_size": 201887797956,
|
Attachments
For Gerrit Dashboard: MB-46796 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
155533,4 | MB-46796: use op_timeout for lcb operations outer loop | unstable | eventing | Status: MERGED | +2 | +1 |
155908,3 | MB-46796: use op_timeout for lcb operations outer loop | cheshire-cat | eventing | Status: MERGED | +2 | +1 |