MB-46796: use op_timeout for lcb operations outer loop

Change-Id: I441efe733f0b7394523ebd5b227c7ad9830076d8
Reviewed-on: http://review.couchbase.org/c/eventing/+/155533
Reviewed-by: CI Bot
Reviewed-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>
Tested-by: Vinayaka Kamath <vinayaka.kamath@couchbase.com>
(cherry picked from commit c7b51f4bf0e0c2d202fc8a5ef0e2fc8767f1a211)
Reviewed-on: http://review.couchbase.org/c/eventing/+/155908
Tested-by: <ankit.prabhu@couchbase.com>
Well-Formed: Restriction Checker